--- a/course/composer.json
+++ b/course/composer.json
@@ -21,11 +21,18 @@
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
+        "files":[
+            "config/init.php",
+            "config/params.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "classmap": [
+            "app/Services/SBlog/Core"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
